--- a/.github/workflows/master_sssf-auth-server.yml
+++ b/.github/workflows/master_sssf-auth-server.yml
@@ -24,6 +24,7 @@ jobs:
       - name: npm install, build, and test
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ JWT_SECRET }}
         run: |
           npm install
           npm run build --if-present
